# ont-bed-generator

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
annotation/: README.md  build_gene_gff.sh
src/ont_bed_generator/: __init__.py  __main__.py  cli.py  intervals.py  io_inputs.py  io_outputs.py  model.py  ordering.py  resolve.py
tests/: conftest.py  test_intervals.py  test_io.py  test_resolve.py
tests/data/: mini.gff3  mini.len  mini_genelist.tsv
